--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -5,3 +5,9 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+<p>@ViewData["email"]</p>
+<p>Professor @ViewData["Professor"]</p>
+
+<address>
+    <strong>More Information: </strong> <a href="http://educamais.com.br">Educamais.com.br</a>
+</address>
