--- a/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Information">Information</a></li>
                     <li><a asp-area="" asp-controller="Departments" asp-action="Index">Depatments</a></li>
+                    <li><a asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a></li>
                 </ul>
             </div>
         </div>
