--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<SalesWebMvc.Models.Seller>
+﻿@model IEnumerable<SalesWebMvc.Models.Seller>
 
 @{
     ViewData["Title"] = "Sellers";
@@ -7,11 +6,10 @@
 
 <h2>@ViewData["Title"] </h2>
 
-<p>Sellers index page</p>
-
 <p>
-    <a asp-action="Creat">Creat New</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
 </p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
