Preparing sales search navigation views

--- a/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Information">Information</a></li>
                     <li><a asp-area="" asp-controller="Departments" asp-action="Index">Depatments</a></li>
                     <li><a asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a></li>
+                    <li><a asp-area="" asp-controller="SalesRecords" asp-action="Index">Sales</a></li>
                 </ul>
             </div>
         </div>
