--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,7 +1,52 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
+
 @{
     ViewData["Title"] = "Simple Search";
 }
 
 <h2>@ViewData["Title"]</h2>
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Min Date</label>
+                    <input type="date" class="form-control" name="minDate" id="minDate"/>
+                </div>
+                <div class="form-group">
+                    <label for="maxDate">Max Date</label>
+                    <input type="date" class="form-control" name="maxDate" id="maxDate"/>
+                </div>
+            </div>
+            <button onclick="carregarTabela()" type="button" class="btn btn-primary">Filter</button>
+        </form>
+    </div>
+</nav>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        @*<h3 class="panel-title">Total sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>*@
+    </div>
+    <div class="panel-body" id="conteudo">
+    </div>
+</div>
+@section scripts
+{
+    <script>
+        function carregarTabela()
+        {
+            let minDate = $("#minDate").val();
+            let maxDate = $("#maxDate").val();
+            $.ajax({
+                type: "GET",
+                url: "/SalesRecords/CarregarTabela",
+                data: { minDate: minDate, maxDate: maxDate },
+                dataType: "html",
+                success: function (response) {
+                    $("#conteudo").html("");
+                    $("#conteudo").html(response);
+                }
+            });
+        }
+    </script>
+}
